// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlaceholderLabel /> should render children 1`] = `
<PlaceholderLabel
  className=""
  ready={true}
  style={null}
>
  <h1>
    foo
  </h1>
</PlaceholderLabel>
`;

exports[`<PlaceholderLabel /> should render placeholder  1`] = `
<PlaceholderLabel
  className=""
  ready={false}
  style={null}
>
  <div
    className="css-qd8qpa "
    style={null}
  />
</PlaceholderLabel>
`;
